Fixed bugs that caused cloner to not work.